--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
     <!-- Page Content -->
     <div class="container">
         <h1>Welcome to My Website</h1>
-        <p>This is the homepage.</p>
+        <br>
+        <p>Things to update:<br>
+        Add login page<br>
+        Update services to page where you're able to post articles/blurbs<br>
+        Update contact page with anyone who has access to website<br>
+        Create page where inside the page you can select what sport you want to look at<br>
+        Within those sports pages, have it scrape the top 15 in any major stat into a table and include the stat info<br>
+        Create page to look at "my team"<br>
+        Under "my team" allow you to select a specific number of players from speciic sports, holds them as your team<br>
+        Create a way to have your login link with a team you selected<br>
+        Create a point system for specific stats, and have those attributes be linked to real time stats that were previously scraped</p>
     </div>
 
 </body>
