--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
+        <a href="login.html">Login</a> 
+        <a href="signup.html">Sign Up</a>  
     </div>
 
     <!-- Page Content -->
