--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
     <div class="container">
         <h1>Welcome to My Website</h1>
         <br>
-        <p>Things to update:<br>
-        Add login page<br>
-        Update services to page where you're able to post articles/blurbs<br>
-        Update contact page with anyone who has access to website<br>
-        Create page where inside the page you can select what sport you want to look at<br>
-        Within those sports pages, have it scrape the top 15 in any major stat into a table and include the stat info<br>
-        Create page to look at "my team"<br>
-        Under "my team" allow you to select a specific number of players from speciic sports, holds them as your team<br>
-        Create a way to have your login link with a team you selected<br>
-        Create a point system for specific stats, and have those attributes be linked to real time stats that were previously scraped</p>
+        <h5>Things to update:<h5>
+        <ul>Add login page</ul>
+        <ul>Update services to page where you're able to post articles/blurbs</ul>
+        <ul>Update contact page with anyone who has access to website</ul>
+        <ul>Create page where inside the page you can select what sport you want to look at</ul>
+        <ul>Within those sports pages, have it scrape the top 15 in any major stat into a table and include the stat info</ul>
+        <ul>Create page to look at "my team"</ul>
+        <ul>Under "my team" allow you to select a specific number of players from speciic sports, holds them as your team</ul>
+        <ul>Create a way to have your login link with a team you selected</ul>
+        <ul>Create a point system for specific stats, and have those attributes be linked to real time stats that were previously scraped</ul></p>
     </div>
 
 </body>
