--- a/index.html
+++ b/index.html
@@ -60,16 +60,19 @@
     <div class="container">
         <h1>Welcome to My Website</h1>
         <br>
-        <h5>Things to update:<h5>
-        <ul>Add login page</ul>
-        <ul>Update services to page where you're able to post articles/blurbs</ul>
-        <ul>Update contact page with anyone who has access to website</ul>
-        <ul>Create page where inside the page you can select what sport you want to look at</ul>
-        <ul>Within those sports pages, have it scrape the top 15 in any major stat into a table and include the stat info</ul>
-        <ul>Create page to look at "my team"</ul>
-        <ul>Under "my team" allow you to select a specific number of players from speciic sports, holds them as your team</ul>
-        <ul>Create a way to have your login link with a team you selected</ul>
-        <ul>Create a point system for specific stats, and have those attributes be linked to real time stats that were previously scraped</ul></p>
+        <h5>Things to update:</h5>
+            <ul>
+                <li>Add login page</li>
+                <li>Update services to page where you're able to post articles/blurbs</li>
+                <li>Update contact page with anyone who has access to website</li>
+                <li>Create page where inside the page you can select what sport you want to look at</li>
+                <li>Within those sports pages, have it scrape the top 15 in any major stat into a table and include the stat info</li>
+                <li>Create page to look at "my team"</li>
+                <li>Under "my team" allow you to select a specific number of players from speciic sports, holds them as your team</li>
+                <li>Create a way to have your login link with a team you selected</li>
+                <li>Create a point system for specific stats, and have those attributes be linked to real time stats that were previously scraped</li>
+            </ul>
+        </p>
     </div>
 
 </body>
