--- a/contact.html
+++ b/contact.html
@@ -29,12 +29,7 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-    </div>
+     <div id="header-container"></div>
 
     <div class="container">
         <h1>Contact Us</h1>
