--- a/index.html
+++ b/index.html
@@ -47,14 +47,7 @@
 <body>
 
     <!-- Navigation Bar -->
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="login.html">Login</a> 
-        <a href="signup.html">Sign Up</a>  
-    </div>
+     <div id="header-container"></div>
 
     <!-- Page Content -->
     <div class="container">
