--- a/login.html
+++ b/login.html
@@ -80,13 +80,7 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="login.html">Login</a>
-    </div>
+    <div id="header-container"></div>
 
     <div class="login-container">
         <h2>Login</h2>
