--- a/signup.html
+++ b/signup.html
@@ -80,14 +80,7 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="login.html">Login</a>
-        <a href="signup.html">Sign Up</a>
-    </div>
+  <div id="header-container"></div>
 
     <div class="signup-container">
         <h2>Sign Up</h2>
