--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedraam's Big Idea</title>
+    <script src="header.js" defer></script>
     <style>
         * {
             margin: 0;
