--- a/contact.html
+++ b/contact.html
@@ -4,28 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: Arial, sans-serif; text-align: center; }
-        .navbar {
-            background-color: #333;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-        }
-        .navbar a {
-            color: white;
-            text-decoration: none;
-            padding: 14px 20px;
-            display: inline-block;
-        }
-        .navbar a:hover {
-            background-color: #575757;
-            transition: 0.3s;
-        }
-        .container { margin-top: 50px; padding: 20px; }
-    </style>
+    <script src="header.js" defer></script>
 </head>
 <body>
 
