--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <script src="header.js" defer></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+
+        /* Page Content */
+        .container {
+            margin-top: 50px;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
 
