--- a/login.html
+++ b/login.html
@@ -6,7 +6,10 @@
     <title>Login</title>
     <script src="header.js" defer></script>
     <style>
-        *login-container {
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: Arial, sans-serif; text-align: center; background-color: #f4f4f4; }
+        
+        login-container {
             width: 300px;
             background: white;
             padding: 20px;
