--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: Arial, sans-serif; text-align: center; background-color: #f4f4f4; }
-        
-        login-container {
+
+        .login-container {
             width: 300px;
             background: white;
             padding: 20px;
@@ -74,6 +74,6 @@
         </form>
         <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
     </div>
-<br><br>
+
 </body>
 </html>
