--- a/header.html
+++ b/header.html
@@ -5,6 +5,7 @@
     <a href="contact.html">Contact</a>
     <a href="login.html">Login</a>
     <a href="signup.html">Sign Up</a>
+    <a href="myTeam.html">My Team</a>
 </div>
 
 <style>
