--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Welcome to My Website</h1>
         <br>
         <h5>Things to update:</h5>
-            <ol>
+            <ul style="list-style-type: square">
                 <li>Add login page</li>
                 <li>Update services to page where you're able to post articles/blurbs</li>
                 <li>Update contact page with anyone who has access to website</li>
@@ -44,7 +44,7 @@
                 <li>Under "my team" allow you to select a specific number of players from speciic sports, holds them as your team</li>
                 <li>Create a way to have your login link with a team you selected</li>
                 <li>Create a point system for specific stats, and have those attributes be linked to real time stats that were previously scraped</li>
-            </ol>
+            </ul>
     </div>
 
 </body>
