--- a/header.html
+++ b/header.html
@@ -28,3 +28,13 @@
         transition: 0.3s;
     }
 </style>
+
+<a href="#" id="logoutBtn">Logout</a>
+
+<script>
+    document.getElementById("logoutBtn").addEventListener("click", function() {
+        localStorage.removeItem("loggedInUser");  // Clear login info
+        window.location.href = "index.html";  // Redirect to homepage
+    });
+</script>
+
