--- a/header.html
+++ b/header.html
@@ -6,6 +6,13 @@
     <a href="login.html">Login</a>
     <a href="signup.html">Sign Up</a>
     <a href="myTeam.html">My Team</a>
+    <a href="#" id="logoutBtn">Logout</a>
+        <script>
+            document.getElementById("logoutBtn").addEventListener("click", function() {
+                localStorage.removeItem("loggedInUser");  // Clear login info
+                window.location.href = "index.html";  // Redirect to homepage
+            });
+        </script>
     <a href="#" id="logoutBtn" style="display: none;">Logout</a>  <!-- Logout button (hidden by default) -->
 </div>
 
