--- a/login.html
+++ b/login.html
@@ -59,31 +59,61 @@
         .signup-link a:hover {
             text-decoration: underline;
         }
+
+        #error-banner {
+            background-color: red;
+            color: white;
+            padding: 10px;
+            font-weight: bold;
+            display: none;  /* Initially hidden */
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
 
     <div id="header-container"></div>
 
+    <!-- Error Banner -->
+    <div id="error-banner">Incorrect username or password. Please try again.</div>
+
     <div class="login-container">
         <h2>Login</h2>
-        <form action="dashboard.html" method="POST">
-            <input type="text" class="input-field" placeholder="Username" required>
-            <input type="password" class="input-field" placeholder="Password" required>
+        <form id="loginForm">
+            <input type="text" id="username" class="input-field" placeholder="Username" required>
+            <input type="password" id="password" class="input-field" placeholder="Password" required>
             <button type="submit" class="login-btn">Login</button>
         </form>
         <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
-        <script>
-            document.getElementById("loginForm").addEventListener("submit", function(event) {
-                event.preventDefault();
-                
-                let username = document.getElementById("username").value;
-                localStorage.setItem("loggedInUser", username);  // Save username in local storage
-        
-                window.location.href = "dashboard.html";  // Redirect to another page
-            });
-        </script>
     </div>
-<br><br>
+
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+
+            // Get values from form inputs
+            let username = document.getElementById("username").value;
+            let password = document.getElementById("password").value;
+
+            // Simulate checking against existing credentials (hardcoded for this example)
+            const existingUser = "user123";  // Hardcoded username
+            const existingPassword = "password123";  // Hardcoded password
+
+            if (username === existingUser && password === existingPassword) {
+                // If the credentials are correct, store the user in local storage and redirect
+                localStorage.setItem("loggedInUser", username);
+                window.location.href = "dashboard.html";  // Redirect to dashboard or home page
+            } else {
+                // If credentials are incorrect, show error message and stay on the login page
+                document.getElementById("error-banner").style.display = "block";  // Show error message
+
+                // Optionally hide the error message after a few seconds
+                setTimeout(function() {
+                    document.getElementById("error-banner").style.display = "none";  // Hide after 5 seconds
+                }, 5000);
+            }
+        });
+    </script>
+
 </body>
 </html>
