--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
     <a href="contact.html">Contact</a>
     <a href="login.html" id="loginLink">Login</a> <!-- Added id for login link -->
     <a href="signup.html" id="signupLink">Sign Up</a> <!-- Added id for signup link -->
-    <a href="myTeam.html">My Team</a>
+    <a href="myTeam.html" id="myTeamLink">My Team</a>  <!-- id for My Team link -->
     <a href="#" id="logoutBtn" style="display: none;">Logout</a>  <!-- Logout button (hidden by default) -->
 </div>
 
