Update and rename services.html to Sports.html

--- a/Sports.html
+++ b/Sports.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
+    <title>Sports!</title>
     <script src="header.js" defer></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -16,8 +16,18 @@
      <div id="header-container"></div>
 
     <div class="container">
-        <h1>Our Services</h1>
-        <p>Discover what we offer.</p>
+        <h1>Baseball</h1>
+        <p>Add basebll stats</p>
+        <br>
+        <h1>Football</h1>
+        <p>Add football stats</p>
+        <br>
+        <h1>Hockey</h1>
+        <p>Add hockey stats</p>
+        <br>
+        <h1>Soccer</h1>
+        <p>Add soccer stats</p>
+        <br>
     </div>
 
 </body>
