--- a/header.html
+++ b/header.html
@@ -58,4 +58,13 @@
         background-color: #575757;
         transition: 0.3s;
     }
+
+    .auth-links {
+        display: flex;  /* Make the login, signup, and logout links appear on the same row */
+        align-items: center;  /* Vertically center the links */
+    }
+
+    .auth-links a {
+        margin-left: 15px;  /* Add some space between the buttons */
+    }
 </style>
