--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <div class="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="sports.html">Services</a>
+    <a href="sports.html">Sports</a>
     <a href="contact.html">Contact</a>
     <a href="login.html" id="loginLink">Login</a> <!-- Added id for login link -->
     <a href="signup.html" id="signupLink">Sign Up</a> <!-- Added id for signup link -->
