Update and rename contact.html to post.html

--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Post something interesting</title>
     <script src="header.js" defer></script>
     <style>
         * {
@@ -29,8 +29,8 @@
      <div id="header-container"></div>
 
     <div class="container">
-        <h1>Contact Us</h1>
-        <p>Get in touch with us.</p>
+        <h1>Post</h1>
+        <p>Update to include a way to post an article and small blurb that appears on the homepage/in a repository you can look through</p>
     </div>
 
 </body>
