--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
     <a href="sports.html">Sports</a>
     <a href="post.html">Post</a>
     <a href="login.html" id="loginLink">Login</a> <!-- Added id for login link -->
-    <a href="signup.html" id="signupLink">Sign Up</a> <!-- Added id for signup link -->
+   <!-- <a href="signup.html" id="signupLink">Sign Up</a> --!> <!-- Added id for signup link, remove button -->
     <a href="myTeam.html" id="myTeamLink">My Team</a>  <!-- id for My Team link -->
     <a href="#" id="logoutBtn" style="display: none;">Logout</a>  <!-- Logout button (hidden by default) -->
 </div>
@@ -19,7 +19,7 @@
         if (user) {
             // Hide the login and signup links
             document.getElementById("loginLink").style.display = "none";
-            document.getElementById("signupLink").style.display = "none";
+           // document.getElementById("signupLink").style.display = "none"; //remove signup
             
             // Show the logout button
             document.getElementById("logoutBtn").style.display = "inline";
