--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
     <div class="container">
         <h1>About Us</h1>
-        <p>Learn more about our mission and values.</p>
+        <p>Just a couple of guys wanting to do sports things.</p>
     </div>
 
 </body>
