--- a/header.html
+++ b/header.html
@@ -3,6 +3,7 @@
     <a href="about.html">About</a>
     <a href="sports.html">Sports</a>
     <a href="post.html">Post</a>
+    <a href="catalog.html">Catalog</a>
     <a href="login.html" id="loginLink">Login</a> <!-- Added id for login link -->
    <!-- <a href="signup.html" id="signupLink">Sign Up</a> --!> <!-- Added id for signup link, remove button -->
     <a href="myTeam.html" id="myTeamLink">My Team</a>  <!-- id for My Team link -->
