--- a/catalog.html
+++ b/catalog.html
@@ -58,12 +58,11 @@
             font-style: italic;
         }
 
-        .archive-btn {
+        .archive-btn, .delete-btn {
             position: absolute;
             right: 10px;
             top: 10px;
             padding: 5px 10px;
-            background-color: #ff6b6b;
             color: white;
             border: none;
             cursor: pointer;
@@ -71,8 +70,20 @@
             font-size: 12px;
         }
 
+        .archive-btn {
+            background-color: #ff6b6b;
+        }
+
         .archive-btn:hover {
             background-color: #e63946;
+        }
+
+        .delete-btn {
+            background-color: #444;
+        }
+
+        .delete-btn:hover {
+            background-color: #222;
         }
 
         .tab-container {
@@ -119,7 +130,7 @@
 
             let storedPosts = JSON.parse(localStorage.getItem("posts")) || [];
             let archivedPosts = JSON.parse(localStorage.getItem("archivedPosts")) || [];
-            let loggedInUser = localStorage.getItem("loggedInUser");
+            let loggedInUser = localStorage.getItem("loggedInUser"); 
 
             function renderPosts(posts, isArchived) {
                 postsContainer.innerHTML = "";
@@ -140,14 +151,24 @@
                         <p><small>Posted on ${new Date(post.timestamp).toLocaleString()}</small></p>
                     `;
 
-                    if (loggedInUser && !isArchived) {
-                        let archiveButton = document.createElement("button");
-                        archiveButton.classList.add("archive-btn");
-                        archiveButton.textContent = "Archive";
-                        archiveButton.onclick = function() {
-                            archivePost(index);
-                        };
-                        postElement.appendChild(archiveButton);
+                    if (loggedInUser) {
+                        if (!isArchived) {
+                            let archiveButton = document.createElement("button");
+                            archiveButton.classList.add("archive-btn");
+                            archiveButton.textContent = "Archive";
+                            archiveButton.onclick = function() {
+                                archivePost(index);
+                            };
+                            postElement.appendChild(archiveButton);
+                        } else {
+                            let deleteButton = document.createElement("button");
+                            deleteButton.classList.add("delete-btn");
+                            deleteButton.textContent = "Delete";
+                            deleteButton.onclick = function() {
+                                deletePost(index);
+                            };
+                            postElement.appendChild(deleteButton);
+                        }
                     }
 
                     postsContainer.appendChild(postElement);
@@ -165,6 +186,15 @@
                 renderPosts(storedPosts, false);
             }
 
+            function deletePost(index) {
+                if (confirm("Are you sure you want to delete this post?")) {
+                    archivedPosts.splice(index, 1);
+                    localStorage.setItem("archivedPosts", JSON.stringify(archivedPosts));
+                    alert("Post deleted permanently!");
+                    renderPosts(archivedPosts, true);
+                }
+            }
+
             newPostsTab.addEventListener("click", function() {
                 newPostsTab.classList.add("active");
                 archivedPostsTab.classList.remove("active");
@@ -177,7 +207,7 @@
                 renderPosts(archivedPosts, true);
             });
 
-            renderPosts(storedPosts, false); // Load new posts initially
+            renderPosts(storedPosts, false);
         });
     </script>
 
