--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <br>
         <h5>Things to update:</h5>
             <ul style="list-style-type: square">
-                <li>Update services to page where you're able to post articles/blurbs</li>
-                <li>Update contact page with anyone who has access to website</li>
                 <li>Within those sports pages, have it scrape the top 15 in any major stat into a table and include the stat info</li>
                 <li>Under "my team" allow you to select a specific number of players from speciic sports, holds them as your team</li>
                 <li>Create a way to have your login link with a team you selected</li>
                 <li>Create a point system for specific stats, and have those attributes be linked to real time stats that were previously scraped</li>
+                <li>Make homepage include a bunch of info, like posts on right side column, list of current teams and their rosters in the center</li>
+                <li>Update About page with actual info</li>
             </ul>
     </div>
 
