--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
             margin-top: 50px;
             padding: 20px;
         }
+
+        /*center list*/
+        div.container {
+            text-align: center;
+        }
+
+        ul.myUL {
+            display: inline-block;
+            text-align: left;
+        }
     </style>
 </head>
 <body>
