--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="sports.html">Sports</a>
-    <a href="post.html">Post</a>
+    <a href="post.html" id="postLink">Post</a>
     <a href="catalog.html">Catalog</a>
     <a href="login.html" id="loginLink">Login</a> <!-- Added id for login link -->
    <!-- <a href="signup.html" id="signupLink">Sign Up</a> --!> <!-- Added id for signup link, remove button -->
