--- a/sports.html
+++ b/sports.html
@@ -34,7 +34,13 @@
         
         <div id="baseball" class="content active">
             <h2>Baseball Stats</h2>
-            <div id="baseball-stats"></div>
+            <div id="baseball-stats">
+             <!-- Batting Average -->
+             <!-- On Base Percentage -->
+             <!-- Slugging -->
+             <!-- Home Runs -->
+             <!-- Stolen Bases -->
+             </div>
         </div>
         
         <div id="football" class="content">
