--- a/sports.html
+++ b/sports.html
@@ -24,9 +24,19 @@
     .table-container {
         border-collapse: collapse;
     }
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-        th, td { border: 1px solid black; padding: 10px; text-align: center; }
-        th { background-color: #333; color: white; }
+    .table-wrapper {
+        text-align: left;
+    }
+    .table-container {
+        border-collapse: collapse;
+    }
+    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    th, td { border: 1px solid black; padding: 10px; text-align: center; }
+    th { background-color: #333; color: white; }
+    h3 {
+        margin-bottom: 10px;
+        font-size: 1.2em;
+    }
     </style>
 </head>
 <body>
